--- a/deploy/azure-pipelines/cicd.yaml
+++ b/deploy/azure-pipelines/cicd.yaml
@@ -73,32 +73,32 @@ stages:
       displayName: 'publish artifact'
       artifact: drop
 
-- stage: Development
-  displayName: 'Deploy to Development'
-  dependsOn: Build
-  condition: succeeded()
+# - stage: Development
+#   displayName: 'Deploy to Development'
+#   dependsOn: Build
+#   condition: succeeded()
 
-  jobs:
-  - deployment: Deploy
-    displayName: 'Deploy'
-    environment: 'devopsworkshop-dev'
+#   jobs:
+#   - deployment: Deploy
+#     displayName: 'Deploy'
+#     environment: 'devopsworkshop-dev'
 
-    pool:
-      vmImage: 'windows-latest'
+#     pool:
+#       vmImage: 'windows-latest'
     
-    strategy:
-      runOnce:
-        deploy:
-          steps:
+#     strategy:
+#       runOnce:
+#         deploy:
+#           steps:
 
-          - download: current
-            displayName: 'download artifact'
-            artifact: drop
+#           - download: current
+#             displayName: 'download artifact'
+#             artifact: drop
 
-          - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App'
-            inputs:
-              azureSubscription: 'devopsworkshop-dev'
-              appType: webApp
-              appName: 'app-devopsworkshop-dev'
-              package: '$(Pipeline.Workspace)/**/WebApi.zip'
+#           - task: AzureWebApp@1
+#             displayName: 'Deploy Azure Web App'
+#             inputs:
+#               azureSubscription: 'devopsworkshop-dev'
+#               appType: webApp
+#               appName: 'app-devopsworkshop-dev'
+#               package: '$(Pipeline.Workspace)/**/WebApi.zip'
